# budsctl

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
budsctl/: __init__.py  api.py  cli.py
budsctl/core/: device_match.py  errors.py  model.py  plugin_loader.py  service.py
budsctl/plugins/: __init__.py  oneplus_buds4.yaml
budsctl/schemas/: __init__.py  plugin.schema.json
budsctl/transports/: __init__.py  base.py  ble_gatt.py  rfcomm.py
docs/: README.md  api.md  cli.md  plugins.md  reverse-engineering.md
tests/: test_api.py  test_cli.py  test_device_match.py  test_discovery.py  test_plugin_loader.py  test_rfcomm.py  test_service_set_feature.py
